[project]
name = "regress-stack"
version = "0.1.0"
description = "Regress Stack is a straightforward Ubuntu OpenStack package configurator designed to simplify the process of setting up an OpenStack environment for testing purposes."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "crudini>=0.9.5",
    "networkx>=2.4",
    "pyroute2<0.8",
    "python-apt",
    "python-openstackclient>=7.1.4",
]

[dependency-groups]
dev = [
    "mypy>=1.14.1",
    "pytest>=8.3.4",
    "ruff>=0.9.5",
    "types-networkx>=3.4.2.20241227",
]

[build-system]
requires = ["setuptools >= 58.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
regress-stack = "regress_stack.__main__:main"

[tool.setuptools]
include-package-data = true

[tool.uv.sources]
python-apt = { git = "https://salsa.debian.org/apt-team/python-apt.git", rev = "2.4.y" }
